# Pkt2TXT

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  DEVELOPER_GUIDE.md  LICENSE  PCAP_DECODER_IMPLEMENTATION_PLAN.md  PCAP_DECODER_STAGE3_COMPLETION_SUMMARY.md  PCAP_DECODER_STAGE4_COMPLETION_SUMMARY.md  PCAP_DECODER_STAGE6_COMPLETION_SUMMARY.md  PCAP_DECODER_VALIDATION_SCRIPT.md  README.md  USER_GUIDE.md  __init__.py  __main__.py  analytics_cli.py  cli.py  deploy.py  pyproject.toml  requirements.txt  stage5_test_report.json  test_stage3.py  test_stage4.py  test_stage5.py  validate_stage4.py
analytics/: __init__.py  config.py
analytics/adapters/: __init__.py  json_adapter.py  schema.py
analytics/core/: __init__.py  aggregator.py  analyzer.py  reporter.py
analytics/docs/: ANALYTICS_MODULE_DESIGN.md
analytics/stats/: base.py  protocol.py  traffic.py
core/: __init__.py  decoder.py  extractor.py  formatter.py  models.py  processor.py  scanner.py
docs/: PCAP_DECODER_STAGE4_COMPLETION_SUMMARY.md  PCAP_DECODER_STAGE6_COMPLETION_SUMMARY.md  PCAP_DECODER_VALIDATION_SCRIPT.md
tests/: __init__.py  conftest.py  test_decoder.py  test_extractor.py  test_formatter.py  test_integration.py  test_performance.py  test_processor.py  test_scanner.py
tests/analytics_output/: batch_analytics.json
tests/samples/IPTCP-200ips/: TC-002-6-20200927-S-A-Replaced.pcapng  TC-002-6-20200927-S-B-Replaced.pcapng
tests/samples/IPTCP-TC-001-1-20160407/: TC-001-1-20160407-A.pcap  TC-001-1-20160407-B.pcap
tests/samples/IPTCP-TC-002-5-20220215/: TC-002-5-20220215-FW-in.pcap  TC-002-5-20220215-FW-out.pcap
tests/samples/IPTCP-TC-002-8-20210817/: TC-002-8-20210817.pcapng
tests/samples/mpls/: mpls.pcap
tests/samples/singlevlan/: 10.200.33.61(10笔).pcap
tests/samples/vxlan4787/: vxlan-double-http.pcap
tests/samples/vxlan_vlan/: vxlan_servicetag_1001.pcap
utils/: __init__.py  config.py  errors.py  helpers.py  progress.py  resource_manager.py
